# m1f

./: ..m1f.config.yml.swp  .gitattributes  .gitignore  .m1f-exclude  .m1f.config.yml  .m1fignore  .prettierrc.yaml  .pymarkdown.json  .pymarkdown.yaml  CHANGELOG.md  GEMINI.md  LICENSE.md  NOTICE  README.md  RELEASE_NOTES_v3.3.0.md  SETUP.md  WINDOWS_TEST_FIXES.md  combined.txt  combined_dirlist.txt  combined_filelist.txt  convert_ez47_simple.py  convert_with_preprocessing.py  demo_mcp_research.py  m1f-claude.txt  makeonefile.py  package-lock.json  package.json  perfect_bundle_prompt.md  pyproject.toml  pytest.ini  requirements.txt  scraped_code-examples.md  scraped_complex-layout.md  scraped_html2md-documentation.md  scraped_m1f-documentation.md  setup.py  splitfiles.py  test-urls.txt  test_global_tools.sh  test_local_scraping.py  (+4 more)
dev/: sync_version.py
docs/: 03_m1f_preset_per_file_settings.md  05_claude_code_integration.md  06_auto_bundle_guide.md  30_html2md.md  31_html2md_guide.md  34_webscraper.md  99_CHANGELOG.md  AUTO_BUNDLE_GUIDE.md  CLAUDE_CODE_INTEGRATION.md  M1F_DEVELOPMENT_WORKFLOW.md  README.md  SETUP.md  auto_bundle_guide.md  claude_code_integration.md  html2md.md  html2md_guide.md  html2md_scraper_backends.md  html2md_test_suite.md  html_to_md.md  html_to_md_guide.md  m1f.md  m1f_cli_preset_analysis.md  m1f_development_workflow.md  m1f_preset_per_file_settings.md  m1f_presets.md  s1f.md  shared_claude_utils.md  token_counter.md  webscraper.md
examples/: README.md  claude_workflows.md  research-config.yml  scrape_claude_code_docs.py  test_hook.py
m1f/: 1_docs.txt  89_scraper_docs.txt  README.md  complete.txt  complete_filelist.txt  docs.txt  docs_dirlist.txt  docs_filelist.txt  html_analysis_1.txt  m1f-docs.txt  m1f.txt  project_analysis_dirlist.txt  project_analysis_filelist.txt
presets/: ai-context.m1f-presets.yml  docs-bundle.m1f-presets.yml  documentation.m1f-presets.yml  example-globals.m1f-presets.yml  example-use-cases.m1f-presets.yml  template-all-settings.m1f-presets.yml  web-project.m1f-presets.yml  wordpress.m1f-presets.yml
research-data/: README.md
scripts/: auto_bundle.ps1  auto_bundle.py  auto_bundle.sh  auto_bundle_preset.sh  auto_bundle_v2.sh  bump_version.py  get_watcher_ignores.py  install-git-hooks.ps1  install-git-hooks.sh  install.ps1  install.sh  m1f_aliases.ps1  m1f_aliases.sh  setup_m1f_aliases.ps1  setup_m1f_aliases.sh  (+5 more)
(+620 files in other folders)
